<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <item
        android:id="@+id/btn_add_my_channel"
        android:icon="@drawable/ic_action_plus"
        android:onClick="btnMyChannelAddClicked"
        android:title="@string/action_mychannel_add"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/btn_beam_my_channel"
        android:icon="@drawable/ic_action_beam"
        android:onClick="btnMyChannelBeamClicked"
        android:title="@string/action_beam"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/btn_filter_my_channel"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search_in_channel"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/btn_edit_my_channel"
        android:icon="@drawable/ic_action_build"
        android:onClick="btnMyChannelEditClicked"
        android:title="@string/action_mychannel_edit"
        app:showAsAction="never|withText" />

</menu>