<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <item
        android:id="@+id/btn_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />


    <group android:checkableBehavior="all">
        <item
            android:id="@+id/checkbox_show_channels"
            android:checkable="true"
            android:checked="true"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/checkbox_show_channels"
            app:showAsAction="never|withText" />
        <item
            android:id="@+id/checkbox_show_torrents"
            android:checkable="true"
            android:checked="true"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/checkbox_show_torrents"
            app:showAsAction="never|withText" />
    </group>


</menu>