<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditChannelActivity"
    tools:showIn="@layout/activity_edit_channel">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5">

        <TextView
            android:id="@+id/channel_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:padding="@dimen/label_padding"
            android:text="@string/explain_create_channel"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/channel_icon_wrapper"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:layout_row="1"
            android:visibility="gone">

            <ImageView
                android:id="@+id/channel_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/channel_capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="56sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:padding="@dimen/label_padding"
            android:text="@string/label_channel_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/channel_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_row="2"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:padding="@dimen/label_padding"
            android:text="@string/label_channel_description"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/channel_description_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_row="3"
            android:inputType="textMultiLine" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_channel_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/fancy_button_vertical_margin"
            android:layout_marginTop="@dimen/fancy_button_vertical_margin"
            android:layout_row="4"
            android:onClick="btnChannelSaveClicked"
            android:paddingBottom="@dimen/fancy_button_vertical_padding"
            android:paddingEnd="@dimen/fancy_button_horizontal_padding"
            android:paddingStart="@dimen/fancy_button_horizontal_padding"
            android:paddingTop="@dimen/fancy_button_vertical_padding"
            fancy:fb_borderColor="@color/red"
            fancy:fb_borderWidth="2dp"
            fancy:fb_defaultColor="@color/transparent"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/action_SAVE"
            fancy:fb_textColor="@color/red" />

    </GridLayout>

</ScrollView>